#674 fix minor sonar lint bugs